Maritiem museum update

--- a/location1.html
+++ b/location1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -36,9 +36,13 @@
 
     <div class="jumbotron">
         <h1>Maritime Museum Rotterdam</h1>
-        <p class="lead">The Maritime Museum Rotterdam is a maritime museum in Rotterdam, The Netherlands. Dedicated to naval history, it was founded in 1874 by Prince Henry of the Netherlands.
+        <p class="lead">
+            The Maritime Museum Rotterdam is a maritime museum in Rotterdam, The Netherlands. Dedicated to naval history, it was founded in 1874 by Prince Henry of the Netherlands.
 
-            Next to the Maritime Museum lies the open-air Maritime Museum Harbour, which merged with the Maritime Museum in 2014. The Maritime Museum Harbour contains an exceptional collection of historic vessels and cranes which are maintained in working condition.</p>
+            Next to the Maritime Museum lies the open-air Maritime Museum Harbour, which merged with the Maritime Museum in 2014. The Maritime Museum Harbour contains an exceptional collection of historic vessels and cranes which are maintained in working condition.
+            In the Maritime Museum Rotterdam, you can discover the enormous effect that shipping has on our daily lives. Go on a journey with us through the maritime past and present in modern exhibitions for adventurers large and small. Listen to the stories, admire the prize exhibits from our leading collection or join in some of the numerous activities. The museum is in one of the oldest and largest museum harbours of the Netherlands, where you can visit historic vessels and cranes and experience how the world's leading port of Rotterdam began at this spot.
+            The Maritime Museum is located in the bustling Maritime District of Rotterdam, near the Erasmus Bridge, the Market Hall and Hotel New York and is easily accessible by public transport.
+        </p>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
 
